welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
	if (a+b=10) { 
             ^blueTicket:5: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
	if (b+c=10) {
             ^blueTicket:8: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
	if (a+c=10) {
             ^blueTicket:11: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
		else if (a+b = 10 +b+c || a+b=10+a+c) {
                          ^